===============================================================================
UBMoD - ChangeLog
===============================================================================

- 2011-11-11 v0.2.0
    - Rewrote portal in PHP and shredder in Perl
    - Restructured database
    - Added additional time periods
    - Added support for SGE accounting logs
    - Added Tagging feature
    - Added monthly charts
    - Replaced CPU consumption charts with wall time charts

- 2011-01-25 v0.1.3
    - Fixed PBS log parser to handle job arrays

- 2010-12-17 v0.1.2
    - Fixed typo in pom.xml to include portal source code in src assembly

- 2010-11-11 v0.1.1
    - Fixed bug in shredder to allow for negative wall times.
    - Added jdk15 classifier to pom.xml net.sf.json-lib library

- 2007-11-11 v0.1.0
    - Initial public release